k8s/kafka-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer
  namespace: pricestream
spec:
  replicas: 1
  selector:
    matchLabels: { app: kafka-consumer }
  template:
    metadata:
      labels: { app: kafka-consumer }
    spec:
      containers:
        - name: consumer
          image: ghcr.io/pazificateur69/pricestream:latest
          args: ["kafka-consumer"]
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits: { cpu: "500m", memory: "512Mi" }
